--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,8 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-setting/*py.*
-setting/*ini.*
+settings*.py.*
+config.ini.*
 
 # Flask stuff:
 instance/
