--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-settings*.py.*
-config.ini.*
+settings_config.ini
 
 # Flask stuff:
 instance/
